Feature/project (#3)
* Add Project module

* Add endpoint for getting list of clients as select options
