# app/Http/Resources/ClientSelectOptionResource.php
@@ -1,0 +1,25 @@
+<?php
+
+namespace App\Http\Resources;
+
+use App\Models\Client;
+use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Attributes as OA;
+
+/**
+ * @mixin Client
+ */
+#[OA\Schema(properties: [
+    new OA\Property(property: 'id', type: 'integer'),
+    new OA\Property(property: 'label', type: 'string'),
+])]
+class ClientSelectOptionResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'label' => $this->name,
+        ];
+    }
+}
