# app/Http/Resources/ProjectPaginatedCollection.php
@@ -1,0 +1,29 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\ResourceCollection;
+use Illuminate\Pagination\LengthAwarePaginator;
+use OpenApi\Attributes as OA;
+
+/**
+ * @mixin LengthAwarePaginator
+ */
+#[OA\Schema(properties: [
+    new OA\Property(property: 'data', type: 'array', items: new OA\Items(ref: '#/components/schemas/ProjectResource')),
+    new OA\Property(property: 'total', type: 'integer'),
+    new OA\Property(property: 'lastPage', type: 'integer'),
+])]
+class ProjectPaginatedCollection extends ResourceCollection
+{
+    public $collects = ProjectResource::class;
+
+    public function toArray($request)
+    {
+        return [
+            'data' => $this->collection,
+            'total' => $this->total(),
+            'lastPage' => $this->lastPage(),
+        ];
+    }
+}
