# app/Http/Resources/ProjectResource.php
@@ -1,0 +1,33 @@
+<?php
+
+namespace App\Http\Resources;
+
+use App\Models\Project;
+use Illuminate\Http\Resources\Json\JsonResource;
+use OpenApi\Attributes as OA;
+
+/**
+ * @mixin Project
+ */
+#[OA\Schema(properties: [
+    new OA\Property(property: 'id', type: 'integer'),
+    new OA\Property(property: 'name', type: 'string'),
+    new OA\Property(property: 'description', type: 'string', nullable: true),
+    new OA\Property(property: 'client', ref: '#/components/schemas/ClientResource'),
+    new OA\Property(property: 'createdAt', type: 'string'),
+    new OA\Property(property: 'updatedAt', type: 'string'),
+])]
+class ProjectResource extends JsonResource
+{
+    public function toArray($request)
+    {
+        return [
+            'id' => $this->id,
+            'name' => $this->name,
+            'description' => $this->description,
+            'client' => new ClientResource($this->client),
+            'createdAt' => $this->created_at,
+            'updatedAt' => $this->updated_at,
+        ];
+    }
+}
