# routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthenticationController;
 use App\Http\Controllers\ClientController;
+use App\Http\Controllers\ProjectController;
 use App\Http\Controllers\UserController;
 use Illuminate\Support\Facades\Route;
 
@@ -23,5 +24,8 @@ Route::middleware('auth:sanctum')->group(function () {
     Route::post('/logout', [AuthenticationController::class, 'logout']);
 
     Route::apiResource('users', UserController::class);
+    Route::get('/clients/select-options', [ClientController::class, 'getSelectOptions']);
     Route::apiResource('clients', ClientController::class);
+    Route::apiResource('projects', ProjectController::class)->except(['store']);
+    Route::post('/clients/{client}/projects', [ProjectController::class, 'store']);
 });
